openshift/kustomize/elastic/dejavu/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: dejavu
  namespace: default
  annotations:
    description: Defines how to deploy dejavu
  labels:
    name: dejavu
    part-of: tno
    version: 1.0.0
    component: dejavu
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    name: dejavu
    part-of: tno
    component: dejavu
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  triggers:
    - type: ConfigChange
  template:
    metadata:
      name: dejavu
      labels:
        name: dejavu
        part-of: tno
        component: dejavu
    spec:
      containers:
        - name: dejavu
          image: appbaseio/dejavu:3.6.0
          imagePullPolicy: Always
          ports:
            - containerPort: 1358
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 50m
              memory: 150Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
