openshift/kustomize/elastic/dejavu/base/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: dejavu
  namespace: default
  annotations:
    description: Exposes and load balances the application pods.
  labels:
    name: dejavu
    part-of: tno
    version: 1.0.0
    component: dejavu
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: 1358-tcp
      port: 1358
      protocol: TCP
      targetPort: 1358
  selector:
    part-of: tno
    component: dejavu
