openshift/kustomize/elastic/dejavu/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dejavu
  namespace: default
  labels:
    name: dejavu
    part-of: tno
    version: 1.0.0
    component: dejavu
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: tno-dejavu.apps.silver.devops.gov.bc.ca
  path: /
  port:
    targetPort: 1358-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: dejavu
    weight: 100
